--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>HandTime</title>
+  <title>DVI | Gaming pentru orice buzunar </title>
 
 
   <!-- bootstrap core css -->
